# pr2_sot_integration

./: .gitmodules  README.md  stack.xml
cram_sot_year2/: cram-sot-year2.asd  manifest.xml
cram_sot_year2/asdf/: cram-sot-year2.asd
cram_sot_year2/src/: conversions.lisp  data-structures.lisp  package.lisp
ctrl_interface/: CMakeLists.txt  mainpage.dox  manifest.xml
ctrl_interface/config/: head_pid.yaml  p.yaml  pi_default.yaml  pi_lowered.yaml
ctrl_interface/launch/: controllers_onlyp.launch  vel_bridge.launch  vel_bridge_test.launch
ctrl_interface/src/: fake_sot.cpp  fb_bridge.cpp  fb_bridge.hpp  fb_bridge_main.cpp  vel_bridge.cpp  vel_bridge.hpp  vel_bridge_main.cpp
feature_constraints_utils/: feature_viz.launch  feature_viz.py  manifest.xml
motion_viz/: CMakeLists.txt  chain_viz.py  chain_viz2.py  debug_itasc_rosie.launch  force_viz.py  jac_chain_viz.py  manifest.xml  marker.py  moveable_objects.launch  moveable_tf.py  pose2tf.py  tf2pose.py  twist_viz.py
motion_viz/msg/: Jacobian.msg  JacobianLocated.msg  TwistLocated.msg
motion_viz/stress_tests/: marker_stress_test.py  tf_tree.py
webint/: CMakeLists.txt  mainpage.dox  manifest.xml
webint/html/: sotvis.html  sotvis2.html
webint/launch/: webint.launch  webint_holder.launch  webint_test.launch
webint/msg/: WebifTaskInfo.msg
webint/src/: ErrorHolder.cpp
webint/test/: task_sender.cpp
